--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,13 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+          
+          -run:
+          command:chmod +x deploy.sh
+          
+           - run:
+          name: Run Tests
+          command: ./gradlew lint test
    
       - store_artifacts:
           path: app/build/reports
