--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,34 @@
+
 version: 2
 jobs:
-  build:
-    working_directory: ~/code
-    docker:
-      - image: circleci/android:api-25-alpha
-    environment:
-      JVM_OPTS: -Xmx3200m
-    steps:
-      - checkout
-      - restore_cache:
+build:
+  working_directory: ~/code
+  docker:
+    - image: circleci/android:api-25-alpha
+  environment:
+    JVM_OPTS: -Xmx3200m
+  general:
+      artifacts:
+          - /home/ubuntu/unideal-android/app/build/outputs/apk/
+  steps:
+    - checkout
+    - restore_cache:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-     
-      - save_cache:
+    - run:
+          name: chmod permissions
+          command: chmod +x ./gradlew
+    - run:
+          name: Run Tests
+          command: ./gradlew build
+    - save_cache:
           paths:
-            - ~/.gradle
+              - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-   
-      - store_artifacts:
+    - store_artifacts:
           path: app/build/reports
           destination: reports
-      - store_test_results:
+    - store_artifacts:
+          path:  app/build/outputs
+          destination: outputs
+    - store_test_results:
           path: app/build/test-results
