--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,11 @@ jobs:
       - image: circleci/android:api-25-alpha
     environment:
       JVM_OPTS: -Xmx3200m
+      
+      general:
+      artifacts:
+          - /home/ubuntu/unideal-android/app/build/outputs/apk/
+      
     steps:
       - checkout
       - restore_cache:
