--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,21 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
-- run:
+     - run:
           name: chmod permissions
           command: chmod +x ./gradlew
     - run:
           name: Run Tests
           command: ./gradlew build
+          - save_cache:
+          paths:
+              - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+    - store_artifacts:
+          path: app/build/reports
+          destination: reports
+    - store_artifacts:
+          path:  app/build/outputs
+          destination: outputs
+    - store_test_results:
+          path: app/build/test-results
