--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,38 +6,28 @@ jobs:
       - image: circleci/android:api-25-alpha
     environment:
       JVM_OPTS: -Xmx3200m
-      
       general:
-      artifacts:
-          - /home/ubuntu/unideal-android/app/build/outputs/apk/      
+          artifacts:
+              - /home/ubuntu/your-app-name/app/build/outputs/apk/
     steps:
       - checkout
       - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}    
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
+         command: sudo chmod +x ./gradlew
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
       - save_cache:
           paths:
             - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}   
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Tests
+          command: ./gradlew lint test
       - store_artifacts:
           path: app/build/reports
           destination: reports
       - store_test_results:
-          path: app/build/test-results
-     - run:
-          name: chmod permissions
-          command: chmod +x ./gradlew
-    - run:
-          name: Run Tests
-          command: ./gradlew build
-          - save_cache:
-          paths:
-              - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-    - store_artifacts:
-          path: app/build/reports
-          destination: reports
-    - store_artifacts:
-          path:  app/build/outputs
-          destination: outputs
-    - store_test_results:
           path: app/build/test-results
