--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,9 @@ jobs:
       - run:
           name: Run Tests
           command: ./gradlew lint test
+          - store_artifacts:
+            path: app/build/outputs/apk/
+            destination: apks/
       - store_artifacts:
           path: app/build/reports
           destination: reports
