--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
           path: app/build/reports
           destination: reports     
       - store_artifacts:
-          path: app/build/reports
-          destination: reports
+          path: app/build/outputs
+          destination: outputs
       - store_test_results:
           path: app/build/test-results
